--- a/index.html
+++ b/index.html
@@ -2764,10 +2764,10 @@
 			src: url('fonts/Aujournuit-Condensed.woff2') format('woff2');
 		}
 	</style>
-	<link rel="icon" href="/SHC/Assets/PNG/Asset 2@2x.png" sizes="32x32">
-	<link rel="icon" href="/SHC/Assets/PNG/Asset 2@2x.png" sizes="192x192">
-	<link rel="apple-touch-icon" href="/SHC/Assets/PNG/Asset 2@2x.png">
-	<meta name="msapplication-TileImage" content="/SHC/Assets/PNG/Asset 2@2x.png">
+	<link rel="icon" href="/SHC/Assets/PNG/Asset2.png" sizes="32x32">
+	<link rel="icon" href="/SHC/Assets/PNG/Asset2.png" sizes="192x192">
+	<link rel="apple-touch-icon" href="/SHC/Assets/PNG/Asset2.png">
+	<meta name="msapplication-TileImage" content="/SHC/Assets/PNG/Asset2.png">
 </head>
 
 <body class="home blog wp-custom-logo wp-embed-responsive wp-theme-twentytwentyfour gutentor-active">
@@ -2781,7 +2781,7 @@
 					<div
 						class="wp-block-group is-layout-flex wp-container-core-group-is-layout-fbcf6490 wp-block-group-is-layout-flex">
 						<div class="wp-block-site-logo"><a href="#" class="custom-logo-link" rel="home"
-								aria-current="page"><img width="60" height="64" src="/SHC/Assets/PNG/Asset 3@2x.png"
+								aria-current="page"><img width="60" height="64" src="/SHC/Assets/PNG/Asset3.png"
 									class="custom-logo" alt="Safe Her Clinic" decoding="async"
 									sizes="(max-width: 60px) 100vw, 60px"></a></div>
 
@@ -3901,7 +3901,8 @@
 						<div class="wp-block-column is-layout-flow wp-block-column-is-layout-flow"
 							style="flex-basis:57%">
 							<p>No concern is too smll or insignificant for us to address. Not sure what to say?.
-							<br>Scan this QR code and an automatic email will be generated. We will respond within 48 hours.
+								<br>Scan this QR code and an automatic email will be generated. We will respond within
+								48 hours.
 							</p>
 						</div>
 
@@ -3938,8 +3939,7 @@
 
 
 
-										<p><a href="#" target="_blank"
-												rel="noreferrer noopener">Instagram</a></p>
+										<p><a href="#" target="_blank" rel="noreferrer noopener">Instagram</a></p>
 									</div>
 								</div>
 							</div>
@@ -3960,8 +3960,7 @@
 
 
 							<p style="font-style:normal;font-weight:400;"
-								class="wp-block-site-title has-small-font-size"><a
-									href="#" target="_self" rel="home"
+								class="wp-block-site-title has-small-font-size"><a href="#" target="_self" rel="home"
 									aria-current="page">Safe Her Clinic</a></p>
 						</div>
 
