--- a/index.html
+++ b/index.html
@@ -2764,10 +2764,10 @@
 			src: url('fonts/Aujournuit-Condensed.woff2') format('woff2');
 		}
 	</style>
-	<link rel="icon" href="/images/Asset2.png" sizes="32x32">
-	<link rel="icon" href="/images/Asset2.png" sizes="192x192">
-	<link rel="apple-touch-icon" href="/images/Asset2.png">
-	<meta name="msapplication-TileImage" content="/images/Asset2.png">
+	<link rel="icon" href="images/Asset2.png" sizes="32x32">
+	<link rel="icon" href="images/Asset2.png" sizes="192x192">
+	<link rel="apple-touch-icon" href="images/Asset2.png">
+	<meta name="msapplication-TileImage" content="images/Asset2.png">
 </head>
 
 <body class="home blog wp-custom-logo wp-embed-responsive wp-theme-twentytwentyfour gutentor-active">
@@ -2781,7 +2781,7 @@
 					<div
 						class="wp-block-group is-layout-flex wp-container-core-group-is-layout-fbcf6490 wp-block-group-is-layout-flex">
 						<div class="wp-block-site-logo"><a href="#" class="custom-logo-link" rel="home"
-								aria-current="page"><img width="60" height="64" src="/images/Asset3.png"
+								aria-current="page"><img width="60" height="64" src="images/Asset3.png"
 									class="custom-logo" alt="Safe Her Clinic" decoding="async"
 									sizes="(max-width: 60px) 100vw, 60px"></a></div>
 
