--- a/index.html
+++ b/index.html
@@ -2781,82 +2781,86 @@
 					class="wp-block-group alignwide is-content-justification-space-between is-layout-flex wp-container-core-group-is-layout-b585a4aa wp-block-group-is-layout-flex">
 					<div
 						class="wp-block-group is-layout-flex wp-container-core-group-is-layout-fbcf6490 wp-block-group-is-layout-flex">
-						<div class="wp-block-site-logo"><a href="#" class="custom-logo-link" rel="home"
-								aria-current="page"><img width="60" height="64" src="images/Asset3.png"
-									class="custom-logo" alt="Safe Her Clinic" decoding="async"
-									sizes="(max-width: 60px) 100vw, 60px"></a></div>
+						<div
+							class="wp-block-group is-layout-flex wp-container-core-group-is-layout-fbcf6490 wp-block-group-is-layout-flex">
+							<div class="wp-block-site-logo"><a href="https://home.purplecodecollective.net/wp/"
+									class="custom-logo-link" rel="home" aria-current="page"><img width="60" height="64"
+										src="images/Vertical-CyberViolet-scaled.png" class="custom-logo"
+										alt="PurpleCode Collective" decoding="async"
+										srcset="images/Vertical-CyberViolet-scaled.png 2390w, images/Vertical-CyberViolet-280x300.png 280w, images/Vertical-CyberViolet-956x1024.png 956w, images/Vertical-CyberViolet-768x823.png 768w, images/Vertical-CyberViolet-1434x1536.png 1434w, images/Vertical-CyberViolet-1912x2048.png 1912w"
+										sizes="(max-width: 60px) 100vw, 60px"></a></div>
+
+
+							<div
+								class="wp-block-group is-layout-flow wp-container-core-group-is-layout-47e5a185 wp-block-group-is-layout-flow">
+								<p class="wp-block-site-title"><a href="#" target="_self" rel="home"
+										aria-current="page">Safe Her Clinic</a></p>
+							</div>
+						</div>
+
 
 
 						<div
-							class="wp-block-group is-layout-flow wp-container-core-group-is-layout-47e5a185 wp-block-group-is-layout-flow">
-							<p class="wp-block-site-title"><a href="#" target="_self" rel="home"
-									aria-current="page">Safe Her Clinic</a></p>
-						</div>
-					</div>
-
-
-
-					<div
-						class="wp-block-group is-content-justification-left is-layout-flex wp-container-core-group-is-layout-bc8e6f51 wp-block-group-is-layout-flex">
-						<nav class="is-responsive items-justified-right wp-block-navigation is-horizontal is-content-justification-right is-layout-flex wp-container-core-navigation-is-layout-cca85a86 wp-block-navigation-is-layout-flex"
-							aria-label="Header navigation" data-wp-interactive="core/navigation" data-wp-context="{"
-							overlayopenedby":{"click":false,"hover":false,"focus":false},"type":"overlay","roleattribute":"","arialabel":"menu"}"="">
-							<button aria-haspopup="dialog" aria-label="Open menu"
-								class="wp-block-navigation__responsive-container-open"
-								data-wp-on--click="actions.openMenuOnClick"
-								data-wp-on--keydown="actions.handleMenuKeydown"><svg width="24" height="24"
-									xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true"
-									focusable="false">
-									<path d="M4 7.5h16v1.5H4z"></path>
-									<path d="M4 15h16v1.5H4z"></path>
-								</svg></button>
-							<div class="wp-block-navigation__responsive-container" id="modal-2"
-								data-wp-class--has-modal-open="state.isMenuOpen"
-								data-wp-class--is-menu-open="state.isMenuOpen" data-wp-watch="callbacks.initMenu"
-								data-wp-on--keydown="actions.handleMenuKeydown"
-								data-wp-on--focusout="actions.handleMenuFocusout" tabindex="-1">
-								<div class="wp-block-navigation__responsive-close" tabindex="-1">
-									<div class="wp-block-navigation__responsive-dialog"
-										data-wp-bind--aria-modal="state.ariaModal"
-										data-wp-bind--aria-label="state.ariaLabel"
-										data-wp-bind--role="state.roleAttribute">
-										<button aria-label="Close menu"
-											class="wp-block-navigation__responsive-container-close"
-											data-wp-on--click="actions.closeMenuOnClick"><svg
-												xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24"
-												height="24" aria-hidden="true" focusable="false">
-												<path
-													d="m13.06 12 6.47-6.47-1.06-1.06L12 10.94 5.53 4.47 4.47 5.53 10.94 12l-6.47 6.47 1.06 1.06L12 13.06l6.47 6.47 1.06-1.06L13.06 12Z">
-												</path>
-											</svg></button>
-										<div class="wp-block-navigation__responsive-container-content"
-											data-wp-watch="callbacks.focusFirstElement" id="modal-2-content">
-											<ul
-												class="wp-block-navigation__container is-responsive items-justified-right wp-block-navigation">
-												<li
-													class=" wp-block-navigation-item is-style-arrow-link wp-block-navigation-link has-small-font-size">
-													<a class="wp-block-navigation-item__content" href="#"><span
-															class="wp-block-navigation-item__label">Home</span></a>
-												</li>
-												<li
-													class=" wp-block-navigation-item is-style-arrow-link wp-block-navigation-link has-small-font-size">
-													<a class="wp-block-navigation-item__content" href="#"><span
-															class="wp-block-navigation-item__label">Blog</span></a>
-												</li>
-												<!-- <li
+							class="wp-block-group is-content-justification-left is-layout-flex wp-container-core-group-is-layout-bc8e6f51 wp-block-group-is-layout-flex">
+							<nav class="is-responsive items-justified-right wp-block-navigation is-horizontal is-content-justification-right is-layout-flex wp-container-core-navigation-is-layout-cca85a86 wp-block-navigation-is-layout-flex"
+								aria-label="Header navigation" data-wp-interactive="core/navigation" data-wp-context="{"
+								overlayopenedby":{"click":false,"hover":false,"focus":false},"type":"overlay","roleattribute":"","arialabel":"menu"}"="">
+								<button aria-haspopup="dialog" aria-label="Open menu"
+									class="wp-block-navigation__responsive-container-open"
+									data-wp-on--click="actions.openMenuOnClick"
+									data-wp-on--keydown="actions.handleMenuKeydown"><svg width="24" height="24"
+										xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true"
+										focusable="false">
+										<path d="M4 7.5h16v1.5H4z"></path>
+										<path d="M4 15h16v1.5H4z"></path>
+									</svg></button>
+								<div class="wp-block-navigation__responsive-container" id="modal-2"
+									data-wp-class--has-modal-open="state.isMenuOpen"
+									data-wp-class--is-menu-open="state.isMenuOpen" data-wp-watch="callbacks.initMenu"
+									data-wp-on--keydown="actions.handleMenuKeydown"
+									data-wp-on--focusout="actions.handleMenuFocusout" tabindex="-1">
+									<div class="wp-block-navigation__responsive-close" tabindex="-1">
+										<div class="wp-block-navigation__responsive-dialog"
+											data-wp-bind--aria-modal="state.ariaModal"
+											data-wp-bind--aria-label="state.ariaLabel"
+											data-wp-bind--role="state.roleAttribute">
+											<button aria-label="Close menu"
+												class="wp-block-navigation__responsive-container-close"
+												data-wp-on--click="actions.closeMenuOnClick"><svg
+													xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24"
+													height="24" aria-hidden="true" focusable="false">
+													<path
+														d="m13.06 12 6.47-6.47-1.06-1.06L12 10.94 5.53 4.47 4.47 5.53 10.94 12l-6.47 6.47 1.06 1.06L12 13.06l6.47 6.47 1.06-1.06L13.06 12Z">
+													</path>
+												</svg></button>
+											<div class="wp-block-navigation__responsive-container-content"
+												data-wp-watch="callbacks.focusFirstElement" id="modal-2-content">
+												<ul
+													class="wp-block-navigation__container is-responsive items-justified-right wp-block-navigation">
+													<li
+														class=" wp-block-navigation-item is-style-arrow-link wp-block-navigation-link has-small-font-size">
+														<a class="wp-block-navigation-item__content" href="#"><span
+																class="wp-block-navigation-item__label">Home</span></a>
+													</li>
+													<li
+														class=" wp-block-navigation-item is-style-arrow-link wp-block-navigation-link has-small-font-size">
+														<a class="wp-block-navigation-item__content" href="#"><span
+																class="wp-block-navigation-item__label">Blog</span></a>
+													</li>
+													<!-- <li
 													class=" wp-block-navigation-item is-style-arrow-link wp-block-navigation-link has-small-font-size">
 													<a class="wp-block-navigation-item__content"
 														href="https://home.purplecodecollective.net/wp/publications"><span
 															class="wp-block-navigation-item__label">Publications</span></a>
 												</li> -->
-												<!-- <li
+													<!-- <li
 													class=" wp-block-navigation-item is-style-arrow-link wp-block-navigation-link has-small-font-size">
 													<a class="wp-block-navigation-item__content"
 														href="https://home.purplecodecollective.net/wp/about/"><span
 															class="wp-block-navigation-item__label">About</span></a>
 												</li> -->
-											</ul>
-											<!-- <form role="search" method="get"
+												</ul>
+												<!-- <form role="search" method="get"
 												action="https://home.purplecodecollective.net/wp/"
 												class="wp-block-search__button-inside wp-block-search__icon-button wp-block-search wp-container-content-9cfa9a5a">
 												<label class="wp-block-search__label screen-reader-text"
@@ -2874,14 +2878,14 @@
 															</path>
 														</svg></button></div>
 											</form> -->
+											</div>
 										</div>
 									</div>
 								</div>
-							</div>
-						</nav>
+							</nav>
+						</div>
 					</div>
 				</div>
-			</div>
 		</header>
 
 
