changed files: images/Cover.jpg images/Ada-Lovelace-1024x1024.png images/Ada-Lovelace-150x150.png images/Ada-Lovelace-300x300.png images/Ada-Lovelace-768x768.png images/Ada-Lovelace.png images/Blog post-pana.png images/Buiding-tech-1024x1024.png images/Buiding-tech-150x150.png images/Buiding-tech-300x300.png images/Buiding-tech-768x768.png images/Buiding-tech.png images/Cover-1024x576.jpg images/Cover-1536x864.jpg images/Cover-300x169.jpg images/Cover-768x432.jpg images/Cyber-feminist_-1024x1024.png

--- a/index.html
+++ b/index.html
@@ -1459,10 +1459,10 @@
 			--wp--preset--color--accent-3: #d8613c;
 			--wp--preset--color--accent-4: #b1c5a4;
 			--wp--preset--color--accent-5: #b5bdbc;
-			--wp--preset--color--custom-deep-iris: #332544;
-			--wp--preset--color--custom-techno-plum: #471b87;
+			--wp--preset--color--custom-deep-iris: #0a0a0a;
+			--wp--preset--color--custom-techno-plum: #0c0c0c;
 			--wp--preset--color--custom-cyber-violet: #7407dd;
-			--wp--preset--color--custom-atomic-lime: #d5f269;
+			--wp--preset--color--custom-atomic-lime: #ADE6ED;
 			--wp--preset--gradient--vivid-cyan-blue-to-vivid-purple: linear-gradient(135deg, rgb(6, 147, 227) 0%, rgb(155, 81, 224) 100%);
 			--wp--preset--gradient--light-green-cyan-to-vivid-green-cyan: linear-gradient(135deg, rgb(122, 220, 180) 0%, rgb(0, 208, 130) 100%);
 			--wp--preset--gradient--luminous-vivid-amber-to-luminous-vivid-orange: linear-gradient(135deg, rgb(252, 185, 0) 0%, rgb(255, 105, 0) 100%);
@@ -2899,14 +2899,16 @@
 				<div class="wp-block-cover__inner-container is-layout-flow wp-block-cover-is-layout-flow">
 					<div
 						class="wp-block-group has-global-padding is-content-justification-left is-layout-constrained wp-container-core-group-is-layout-0b562c1c wp-block-group-is-layout-constrained">
-						<h2 class="wp-block-heading has-text-align-left is-style-default has-base-2-color has-text-color"
-							style="font-size:clamp(31.152px, 1.947rem + ((1vw - 3.2px) * 2.484), 55px);font-style:normal;font-weight:700;letter-spacing:0px;line-height:1;text-transform:none">
-							<strong>SHC is a for women, by women digital security clinic supporting survivors of
+						<h2 class="wp-block-heading has-text-align-left is-style-default "
+							style="font-size:clamp(31.152px, 1.947rem + ((1vw - 3.2px) * 2.484), 55px);font-style:normal;font-weight:700;letter-spacing:0px;line-height:1;text-transform:none; color: #111314 ;">
+							SHC is a for women, by women digital security clinic supporting survivors of
 								technology-facilitated gender-based
 								violence. Have you experienced any form of violence through technology
 								Do you think someone is using technology to control, monitor, or harm you?
-							</strong>
-							Talk to us
+							<strong><italics>
+								<br>
+								Talk to us
+								</strong></italics>
 
 						</h2>
 					</div>
@@ -3046,12 +3048,11 @@
 
 
 
-						<hr class="wp-block-separator has-alpha-channel-opacity is-style-wide">
 					</div>
 
 
 
-					<div style="height:var(--wp--preset--spacing--40)" aria-hidden="true" class="wp-block-spacer"></div>
+					<!-- <div style="height:var(--wp--preset--spacing--40)" aria-hidden="true" class="wp-block-spacer"></div> -->
 
 
 
@@ -3902,8 +3903,8 @@
 						<div class="wp-block-column is-layout-flow wp-block-column-is-layout-flow"
 							style="flex-basis:57%">
 							<p>No concern is too smll or insignificant for us to address. Not sure what to say?.
-								<br>Scan this QR code and an automatic email will be generated. We will respond within
-								48 hours.
+								<br><strong>Scan this QR code and an automatic email will be generated. We will respond within
+								48 hours.</strong>
 							</p>
 						</div>
 
@@ -3967,9 +3968,9 @@
 
 
 
-						<p class="has-small-font-size">Unless otherwise stated, all content on PurpleCodes site is
+						<!-- <p class="has-small-font-size">Unless otherwise stated, all content on PurpleCodes site is
 							licensed under <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/deed.en"
-								target="_blank" rel="noreferrer noopener">CC BY-NC-ND 4.0</a></p>
+								target="_blank" rel="noreferrer noopener">CC BY-NC-ND 4.0</a></p> -->
 					</div>
 				</div>
 			</div>
